Fixes on orchestration

--- a/airflow/airflow-secrets.yaml
+++ b/airflow/airflow-secrets.yaml
@@ -4,6 +4,6 @@ metadata:
   name: airflow-secrets
   namespace: ${namespace}
 data:
-  # example: postgres://airflow:airflow@postgres:5432/airflow
-  AIRFLOW__CORE__SQL_ALCHEMY_CONN: 
+  # example: postgres+psycopg2://airflow:airflow@postgres:5432/airflow in base64
+  AIRFLOW__CORE__SQL_ALCHEMY_CONN:
 type: Opaque
