--- a/airflow/git-secrets.yaml
+++ b/airflow/git-secrets.yaml
@@ -4,8 +4,8 @@ metadata:
   name: dags-git-repository-secret
   namespace: ${namespace}
 data:
-  GIT_REPOSITORY_PASSWORD: 
-  # example: bitbucket.org/<user>/<dags_repo>.git
-  GIT_REPOSITORY_URL: 
-  GIT_REPOSITORY_USERNAME: 
+  GIT_REPOSITORY_PASSWORD:
+  # example: bitbucket.org/<user>/<dags_repo>.git in base64 encoding
+  GIT_REPOSITORY_URL:
+  GIT_REPOSITORY_USERNAME:
 type: Opaque
